fix console clearing